# family-wealth-os-v1.0

./: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
TradingAgents-main/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  api_server.py  main.py  pyproject.toml  test.py
TradingAgents-main/.github/workflows/: ci.yml
TradingAgents-main/cli/: announcements.py  main.py  models.py  stats_handler.py  utils.py
TradingAgents-main/scripts/: smoke_structured_output.py
TradingAgents-main/tests/: conftest.py  test_alpha_vantage_hardening.py  test_analyst_execution.py  test_anthropic_effort.py  test_api_key_env.py  test_bedrock_provider.py  test_capabilities.py  test_checkpoint_resume.py  test_cli_env_skip.py  test_cli_symbol_handling.py  test_crypto_asset_mode.py  test_date_boundaries.py  test_deepseek_reasoning.py  test_env_overrides.py  test_fred.py  test_i18n_coverage.py  test_instrument_identity.py  test_market_data_validator.py  test_market_toolnode.py  test_memory_log.py  test_minimax.py  test_news_lookahead.py  test_no_data_handling.py  test_ollama_base_url.py  test_openai_compatible_provider.py  test_openai_responses_base_url.py  test_openrouter_model_select.py  test_polymarket.py  test_provider_registry.py  test_reddit_fallback.py  test_safe_ticker_component.py  test_signal_processing.py  test_stockstats_date_column.py  test_stocktwits_resilience.py  test_structured_agents.py  test_symbol_normalization_paths.py  test_symbol_utils.py  test_temperature_config.py  test_ticker_symbol_handling.py  test_vendor_errors.py  (+2 more)
TradingAgents-main/tradingagents/: __init__.py  default_config.py
TradingAgents-main/tradingagents/agents/: __init__.py  schemas.py
TradingAgents-main/tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py  social_media_analyst.py
TradingAgents-main/tradingagents/agents/managers/: portfolio_manager.py  (+1 more)
TradingAgents-main/tradingagents/dataflows/: fred.py  market_data_validator.py  reddit.py  stockstats_utils.py  stocktwits.py
TradingAgents-main/tradingagents/graph/: __init__.py  analyst_execution.py  checkpointer.py  conditional_logic.py  propagation.py  reflection.py  setup.py  trading_graph.py
TradingAgents-main/tradingagents/llm_clients/: anthropic_client.py  api_key_env.py  azure_client.py  base_client.py  bedrock_client.py  capabilities.py  factory.py  google_client.py  model_catalog.py  openai_client.py  validators.py
(+105 files in other folders)
